# kalshi-trade-rs

./: .env.blank  .gitignore  API_CHANGES_TODO.md  API_STATUS.md  CHANGELOG.md  Cargo.toml  LICENSE  README.md
.beads/: issues.jsonl
.beads/backup/: backup_state.json  config.jsonl  events.jsonl  issues.jsonl
.github/workflows/: ci.yml
examples/: batch_manager.rs  batch_orders.rs  candlesticks.rs  events.rs  exchange_status.rs  historical.rs  live_data.rs  markets.rs  milestones.rs  multi_channel_subscribe.rs  order_groups.rs  orderbook_aggregator.rs  portfolio.rs  rfq_verify.rs  search.rs  series_and_search.rs  stream_firehose.rs  stream_lifecycle.rs  stream_reconnect.rs  stream_ticker.rs  stream_user_channels.rs  stream_user_orders.rs  structured_targets.rs  test_auth.rs  test_multi_channel_subscribe.rs  trading.rs
src/: api.rs  auth.rs  batch.rs  client.rs  error.rs  lib.rs  models.rs  ws.rs
src/api/: README.md  README_3p.md  account.rs  api_keys.rs  communications.rs  events.rs  exchange.rs  fcm.rs  historical.rs  incentive_programs.rs  live_data.rs  markets.rs  milestones.rs  multivariate.rs  order_groups.rs  orders.rs  portfolio.rs  search.rs  series.rs  structured_targets.rs  subaccounts.rs
src/client/: http.rs  websocket.rs
src/models/: account.rs  api_key.rs  balance.rs  common.rs  communications.rs  event.rs  exchange.rs  fcm.rs  fill.rs  historical.rs  incentive_program.rs  live_data.rs  market.rs  milestone.rs  mod.rs  multivariate.rs  order.rs  order_group.rs  position.rs  query.rs  search.rs  series.rs  settlement.rs  (+2 more)
tests/: api_integration.rs
(+14 files in other folders)
